Added game elements to index.html.

--- a/index.html
+++ b/index.html
@@ -10,12 +10,17 @@
 		<div id="timer"></div>
 		<div id="question"></div>
 		<div id="answers"></div>
+		<div id="game-over">
+			<h2> Right Answers: <span id="right"></span></h2>
+			<h2> Wrong Answers: <span id="wrong"></span></h2>
+			<button id="restart">Restart</button>
+		</div>
 	</div>
 
 	<script
 	  src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
 	  integrity="sha256-k2WSCIexGzOj3Euiig+TlR8gA0EmPjuc79OEeY5L45g="
 	  crossorigin="anonymous"></script>	
-	<script type="text/javascript" src=""></script>
+	<script type="text/javascript" src="assets/javascript/app.js"></script>
 </body>
 </html>
