--- a/index.html
+++ b/index.html
@@ -4,32 +4,37 @@
 	<meta charset="UTF-8">
 	<title>Trivia Game</title>
 	<link rel="stylesheet" href="assets/css/style.css" />
+	<!-- Latest compiled and minified CSS -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 </head>
 <body>
-	<div class="container">
-		<h1></h1>
-		<div id="time-remaining">
-			Time Remaining: <span id="timer"></span>
+	<div class="text-center container">
+		<h1 class="text-center">Disney Trivia Game!</h1>
+		<div id="start-game">
+			<button id="start" class="btn btn-success">Start game!</button>
 		</div>
-		<div id="question"></div>
-		<div id="answers">
-			<ul class="list-group">
-			  <li type="button" class="list-group-item" id="a">
-			  </li>
-			  <li type="button" class="list-group-item" id="b">
-			  </li>
-			  <li type="button" class="list-group-item" id="c">
-			  </li>
-			  <li type="button" class="list-group-item" id="d">
-			  </li>
-			  <li type="button" class="list-group-item" id="e">
-			  </li>
-			</ul>
+		<div id="game">
+			<div id="time-remaining">
+				<span id="timer"></span>
+			</div>
+			<div id="question"></div>
+			<div id="answers">
+				<ul class="list-group">
+				  <li type="button" class="list-group-item" id="0">
+				  </li>
+				  <li type="button" class="list-group-item" id="1">
+				  </li>
+				  <li type="button" class="list-group-item" id="2">
+				  </li>
+				  <li type="button" class="list-group-item" id="3">
+				  </li>
+				</ul>
+			</div>
 		</div>
 		<div id="game-over">
 			<h2> Right Answers: <span id="right"></span></h2>
 			<h2> Wrong Answers: <span id="wrong"></span></h2>
-			<button id="restart">Restart</button>
+			<button id="restart" class="btn btn-success">Restart</button>
 		</div>
 	</div>
 
