Added questions and answers. Added images for each question. Updated css.

--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
 	<div class="text-center container">
 		<h1 class="text-center">Disney Trivia Game!</h1>
 		<div id="start-game">
-			<button id="start" class="btn btn-success">Start game!</button>
+			<button id="start" class="btn btn-success btn-lg">Start game!</button>
 		</div>
 		<div id="game">
 			<div id="time-remaining">
 				<span id="timer"></span>
 			</div>
+			<div id="image"></div>
 			<div id="question"></div>
 			<div id="answers">
 				<ul class="list-group">
@@ -34,7 +35,7 @@
 		<div id="game-over">
 			<h2> Right Answers: <span id="right"></span></h2>
 			<h2> Wrong Answers: <span id="wrong"></span></h2>
-			<button id="restart" class="btn btn-success">Restart</button>
+			<button id="restart" class="btn btn-success btn-lg">Restart</button>
 		</div>
 	</div>
 
